--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ charset-normalizer==2.1.0
     # via requests
 click==8.1.3
     # via sphinx-intl
+colorama==0.4.5
+    # via sphinx-autobuild
 docutils==0.17.1
     # via
     #   myst-parser
@@ -47,6 +49,8 @@ jsonpointer==2.3
     #   sphinxcontrib-opendataservices-jsonschema
 jsonref==0.2
     # via sphinxcontrib-opendataservices-jsonschema
+livereload==2.6.3
+    # via sphinx-autobuild
 markdown-it-py==2.1.0
     # via
     #   mdit-py-plugins
@@ -81,7 +85,9 @@ requests==2.28.1
     #   sphinx
     #   transifex-client
 six==1.16.0
-    # via transifex-client
+    # via
+    #   livereload
+    #   transifex-client
 smmap==5.0.0
     # via gitdb
 snowballstemmer==2.2.0
@@ -93,10 +99,13 @@ sphinx==5.1.1
     #   -r requirements.in
     #   furo
     #   myst-parser
+    #   sphinx-autobuild
     #   sphinx-basic-ng
     #   sphinx-intl
     #   sphinx-rtd-theme
     #   sphinxcontrib-opendataservices
+sphinx-autobuild==2021.3.14
+    # via -r requirements.in
 sphinx-basic-ng==0.0.1a12
     # via furo
 sphinx-intl==2.0.1
@@ -123,6 +132,8 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 text-unidecode==1.3
     # via python-slugify
+tornado==6.2
+    # via livereload
 transifex-client==0.14.4
     # via -r requirements.in
 typing-extensions==4.3.0
