--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
   tools:
     python: "3.9"
     # You can also specify other tool versions:
-    nodejs: "16"
+    # nodejs: "16"
     # rust: "1.55"
     # golang: "1.17"
 
