--- a/requirements.txt
+++ b/requirements.txt
@@ -16,18 +16,20 @@ babel==2.10.3
     # via
     #   sphinx
     #   sphinx-intl
-beautifulsoup4==4.11.1
-    # via furo
 cattrs==22.1.0
     # via requests-cache
 certifi==2022.6.15
     # via requests
+cffi==1.15.1
+    # via pynacl
 charset-normalizer==2.1.0
     # via requests
 click==8.1.3
     # via sphinx-intl
 colorama==0.4.5
     # via sphinx-autobuild
+deprecated==1.2.13
+    # via pygithub
 docutils==0.17.1
     # via
     #   myst-parser
@@ -37,8 +39,6 @@ docutils==0.17.1
     #   sphinxcontrib-opendataservices-jsonschema
 exceptiongroup==1.0.0rc9
     # via cattrs
-furo==2022.6.21
-    # via -r requirements.in
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
@@ -94,10 +94,16 @@ packaging==21.3
     # via sphinx
 pyairtable==1.3.0
     # via -r requirements.in
+pycparser==2.21
+    # via cffi
+pygithub==1.55
+    # via -r requirements.in
 pygments==2.12.0
-    # via
-    #   furo
-    #   sphinx
+    # via sphinx
+pyjwt==2.4.0
+    # via pygithub
+pynacl==1.5.0
+    # via pygithub
 pyparsing==3.0.9
     # via packaging
 python-slugify==4.0.1
@@ -111,6 +117,7 @@ requests==2.28.1
     #   ocdsextensionregistry
     #   ocdsmerge
     #   pyairtable
+    #   pygithub
     #   requests-cache
     #   sphinx
     #   transifex-client
@@ -125,23 +132,17 @@ smmap==5.0.0
     # via gitdb
 snowballstemmer==2.2.0
     # via sphinx
-soupsieve==2.3.2.post1
-    # via beautifulsoup4
 sphinx==4.5.0
     # via
     #   -r requirements.in
-    #   furo
     #   myst-parser
     #   sphinx-autobuild
-    #   sphinx-basic-ng
     #   sphinx-design
     #   sphinx-intl
     #   sphinx-rtd-theme
     #   sphinxcontrib-opendataservices
 sphinx-autobuild==2021.3.14
     # via -r requirements.in
-sphinx-basic-ng==0.0.1a12
-    # via furo
 sphinx-design==0.3.0
     # via -r requirements.in
 sphinx-intl==2.0.1
@@ -181,6 +182,8 @@ urllib3==1.26.11
     #   requests
     #   requests-cache
     #   transifex-client
+wrapt==1.14.1
+    # via deprecated
 zipp==3.8.1
     # via importlib-metadata
 
