--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,8 @@ ocdskit==1.1.1
     # via -r requirements.in
 ocdsmerge==0.6.6
     # via ocdskit
+ofdskit==0.0.0
+    # via -r requirements.in
 packaging==21.3
     # via sphinx
 pyairtable==1.3.0
