--- a/.github/workflows/mdformat.yml
+++ b/.github/workflows/mdformat.yml
@@ -6,8 +6,15 @@ jobs:
     name: Mdformat Action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Mdformat Action
-        uses: ydah/mdformat-action@main
-        with:
-          number: true
+    - uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+        architecture: x64
+    - uses: actions/cache@v1
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    - run: pip install -r requirements.txt
+    - run: mdformat --check ./docs/**/*.md
