--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,16 @@ appdirs==1.4.4
 attrs==22.1.0
     # via
     #   cattrs
+    #   jsonschema
+    #   pytest
     #   requests-cache
 babel==2.10.3
     # via
     #   sphinx
     #   sphinx-intl
-backports-datetime-fromisoformat==1.0.0
+backports-datetime-fromisoformat==2.0.0
     # via flattentool
-btrees==4.10.1
+btrees==4.11.3
     # via zodb
 cattrs==22.1.0
     # via requests-cache
@@ -50,8 +52,10 @@ docutils==0.17.1
 et-xmlfile==1.1.0
     # via openpyxl
 exceptiongroup==1.0.0rc9
-    # via cattrs
-flattentool==0.18.1
+    # via
+    #   cattrs
+    #   pytest
+flattentool==0.19.0
     # via -r requirements.in
 gitdb==4.0.9
     # via gitpython
@@ -69,24 +73,35 @@ importlib-metadata==4.12.0
     # via
     #   mdformat
     #   sphinx
+iniconfig==1.1.1
+    # via pytest
 jinja2==3.1.2
     # via
     #   myst-parser
     #   sphinx
+jscc==0.1.0
+    # via -r requirements.in
 json-merge-patch==0.2
-    # via ocdsextensionregistry
+    # via
+    #   jscc
+    #   ocdsextensionregistry
 jsonpointer==2.3
     # via
     #   sphinxcontrib-opendataservices
     #   sphinxcontrib-opendataservices-jsonschema
-jsonref==0.2
+jsonref==1.0.1
     # via
     #   -r requirements.in
     #   flattentool
+    #   jscc
     #   ocdsextensionregistry
     #   ocdskit
     #   ocdsmerge
     #   sphinxcontrib-opendataservices-jsonschema
+jsonschema==4.17.3
+    # via
+    #   -r requirements.in
+    #   jscc
 livereload==2.6.3
     # via sphinx-autobuild
 lxml==4.9.1
@@ -122,11 +137,15 @@ ofdskit==0.0.0
 openpyxl==3.0.10
     # via flattentool
 packaging==21.3
-    # via sphinx
-persistent==4.9.1
+    # via
+    #   pytest
+    #   sphinx
+persistent==4.9.3
     # via
     #   btrees
     #   zodb
+pluggy==1.0.0
+    # via pytest
 pyairtable==1.3.0
     # via -r requirements.in
 pycparser==2.21
@@ -141,6 +160,10 @@ pynacl==1.5.0
     # via pygithub
 pyparsing==3.0.9
     # via packaging
+pyrsistent==0.19.2
+    # via jsonschema
+pytest==7.2.0
+    # via -r requirements.in
 python-slugify==4.0.1
     # via transifex-client
 pytz==2022.1
@@ -151,6 +174,7 @@ pyyaml==6.0
     # via myst-parser
 requests==2.28.1
     # via
+    #   jscc
     #   ocdsextensionregistry
     #   ocdsmerge
     #   pyairtable
@@ -160,11 +184,16 @@ requests==2.28.1
     #   transifex-client
 requests-cache==0.9.6
     # via ocdsextensionregistry
+rfc3339-validator==0.1.4
+    # via jscc
+rfc3986-validator==0.1.1
+    # via jscc
 schema==0.7.5
     # via flattentool
 six==1.16.0
     # via
     #   livereload
+    #   rfc3339-validator
     #   transifex-client
     #   url-normalize
     #   zodb
@@ -210,7 +239,9 @@ sphinxcontrib-serializinghtml==1.1.5
 text-unidecode==1.3
     # via python-slugify
 tomli==2.0.1
-    # via mdformat
+    # via
+    #   mdformat
+    #   pytest
 tornado==6.2
     # via livereload
 transaction==3.0.1
@@ -238,13 +269,13 @@ zconfig==3.6.0
     # via zodb
 zipp==3.8.1
     # via importlib-metadata
-zodb==5.7.0
+zodb==5.8.0
     # via
     #   flattentool
     #   zc-zlibstorage
-zodbpickle==2.4
+zodbpickle==2.6
     # via zodb
-zope-interface==5.5.0
+zope-interface==5.5.2
     # via
     #   btrees
     #   persistent
