--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-    - run: pip install -r requirements_test.txt
+    - run: pip install -r requirements.txt
     - run: pytest tests
