--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ appdirs==1.4.4
 attrs==22.1.0
     # via
     #   cattrs
+    #   jsonschema
     #   requests-cache
 babel==2.10.3
     # via
@@ -72,7 +73,9 @@ jinja2==3.1.2
     #   myst-parser
     #   sphinx
 json-merge-patch==0.2
-    # via ocdsextensionregistry
+    # via
+    #   libcoveofds
+    #   ocdsextensionregistry
 jsonpointer==2.3
     # via
     #   sphinxcontrib-opendataservices
@@ -81,10 +84,15 @@ jsonref==0.2
     # via
     #   -r requirements.in
     #   flattentool
+    #   libcoveofds
     #   ocdsextensionregistry
     #   ocdskit
     #   ocdsmerge
     #   sphinxcontrib-opendataservices-jsonschema
+jsonschema==4.17.3
+    # via libcoveofds
+libcoveofds==0.5.0
+    # via -r requirements.in
 livereload==2.6.3
     # via sphinx-autobuild
 lxml==4.9.1
@@ -112,8 +120,6 @@ ocdsmerge==0.6.6
     # via ocdskit
 odfpy==1.4.1
     # via flattentool
-ofdskit==0.0.0
-    # via -r requirements.in
 openpyxl==3.0.10
     # via flattentool
 packaging==21.3
@@ -136,6 +142,8 @@ pynacl==1.5.0
     # via pygithub
 pyparsing==3.0.9
     # via packaging
+pyrsistent==0.19.2
+    # via jsonschema
 python-slugify==4.0.1
     # via transifex-client
 pytz==2022.1
@@ -146,6 +154,7 @@ pyyaml==6.0
     # via myst-parser
 requests==2.28.1
     # via
+    #   libcoveofds
     #   ocdsextensionregistry
     #   ocdsmerge
     #   pyairtable
