--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,9 @@ ijson==3.1.4
 imagesize==1.4.1
     # via sphinx
 importlib-metadata==4.12.0
-    # via sphinx
+    # via
+    #   mdformat
+    #   sphinx
 iniconfig==1.1.1
     # via pytest
 jinja2==3.1.2
@@ -110,10 +112,13 @@ lxml==4.9.1
     # via flattentool
 markdown-it-py==2.1.0
     # via
+    #   mdformat
     #   mdit-py-plugins
     #   myst-parser
 markupsafe==2.1.1
     # via jinja2
+mdformat==0.7.16
+    # via -r requirements.in
 mdit-py-plugins==0.3.0
     # via myst-parser
 mdurl==0.1.1
@@ -237,7 +242,9 @@ sphinxcontrib-serializinghtml==1.1.5
 text-unidecode==1.3
     # via python-slugify
 tomli==2.0.1
-    # via pytest
+    # via
+    #   mdformat
+    #   pytest
 tornado==6.2
     # via livereload
 transaction==3.0.1
