--- a/requirements.in
+++ b/requirements.in
@@ -4,7 +4,6 @@ sphinxcontrib-opendataservices
 sphinxcontrib-opendataservices-jsonschema
 sphinx-intl
 transifex-client
-sphinx_rtd_theme
 myst-parser
 sphinx-autobuild
 pyairtable
@@ -17,3 +16,4 @@ pytest
 jscc
 mdformat
 jsonschema
+furo
