docs/primer/scopeandkeyconcepts.md: Quote code descriptions

--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,9 @@
 jsonref
 sphinx
+sphinxcontrib-opencontracting
 sphinxcontrib-opendataservices
 sphinxcontrib-opendataservices-jsonschema
 sphinx-intl
-transifex-client
 sphinx_rtd_theme
 myst-parser
 sphinx-autobuild
