--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,6 @@ jsonref==1.0.1
     #   -r requirements.in
     #   flattentool
     #   jscc
-    #   libcoveofds
     #   ocdsextensionregistry
     #   ocdskit
     #   ocdsmerge
@@ -97,7 +96,7 @@ jsonschema==4.17.3
     #   -r requirements.in
     #   jscc
     #   libcoveofds
-libcoveofds==0.5.0
+libcoveofds==0.8.2
     # via -r requirements.in
 livereload==2.6.3
     # via sphinx-autobuild
@@ -173,7 +172,6 @@ pyyaml==6.0
 requests==2.28.1
     # via
     #   jscc
-    #   libcoveofds
     #   ocdsextensionregistry
     #   ocdsmerge
     #   pyairtable
@@ -187,6 +185,8 @@ rfc3339-validator==0.1.4
     # via jscc
 rfc3986-validator==0.1.1
     # via jscc
+rfc3987==1.3.8
+    # via libcoveofds
 schema==0.7.5
     # via flattentool
 shapely==2.0.1
